align the text to center (https://github.com/lazarnarcis/chat/issues/19)

--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,7 @@ body {
 #press_to_send {
     color: white;
     margin: 0;
+    text-align: center;
     font-size: 15px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
